# foo

./: pyproject.toml
foo/: foo.py
