[tool.poetry]
name = "foo"
version = "0.1.0"
description = ""
authors = ["Matthew Karas <1146938+lucidguppy@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
